# The-Ham-Sandwich

./: CMakeLists.txt  README.md  Wildstar_Studio_2.ilk  imgui.ini
Assets/010 Templates/: M3Model.bt  TexFile.bt
Blender Addons/: wildstar_terrain_importer.py
archive/: README.md  WildstarStudio.sln
archive/NexusForever-game_rework/: .gitignore  README.md
archive/NexusForever-game_rework/Source/: Directory.Packages.props  NexusForever.sln  NexusForever.slnx
archive/Online/: index.html
archive/Online/js/: dialogs.js  i3View.js  main.js  shaderView.js  skyFile.js  skyView.js  texture.js  textureView.js  webgl-utils.js
archive/Online/utils/: zlib.js
archive/UI/: index.html
archive/UI/js/: audio.js  codeView.js  data.js  imageView.js
archive/WildstarStudio/: Archive.h  AreaFile.cpp  AreaJS.cpp  AreaRender.cpp  ArgumentMatch.h  Array.cpp  Array.h  Bases.h  Camera.cpp  Camera.h  Class.h  DataTable.cpp  DataTable.h  Enum.cpp  FileLoaderThread.h  Files.cpp  Files.h  FunctionInstance.h  GxContext.h  IOManager.cpp  IOManager.h  InputGeometry.cpp  InputGeometry.h  M3Model.h  Main.cpp  Matrix.cpp  Matrix.h  ModelRender.cpp  ModelRender.h  Object.h  PerspectivicCamera.cpp  PerspectivicCamera.h  Pipeline.cpp  Program.cpp  Program.h  Resources.rc  Scope.cpp  Scope.h  ScopeObjectCollection.cpp  Shader.cpp  (+14 more)
archive/dep/res/: AreaFragment.glsl  M3Vertex.glsl
archive/wildstar studio/: .gitignore
archive/wildstar studio/WildstarStudio/: Archive.cpp  BinLocale.h  BinStream.h  BinaryStream.h  Buffer.cpp  Buffer.h  ClassInstance.cpp  ClassInstance.h  Common.cpp  Common.h  Compression.cpp  Compression.h  Enum.h  File.cpp  File.h  FileLoaderThread.cpp  Function.cpp  Function.h  FunctionInstance.cpp  GlExt.cpp  GlExt.h  GxContext.cpp  HexEditor.cpp  HexEditor.h  I3Model.cpp  I3Model.h  I3Sector.cpp  I3Sector.h  IndexBuffer.h  M3Model.cpp  Namespace.h  Object.cpp  ObjectWrap.h  ObjectWrap.inl  Pipeline.h  SAMPLE_AreaFile.h  SAMPLE_AreaJS.h  SAMPLE_AreaRender.h  SAMPLE_TextureInput.h  ScopeObject.cpp  (+17 more)
archive/wildstar tool/: .gitmodules  BrushGradient.psd  ws-tool.sln
archive/wildstar tool/Editor/: App.xaml  App.xaml.cs  Editor - Backup.csproj  Editor.cs  Editor.csproj  FPSCounter.cs  Program.cs
archive/wildstar tool/Engine/: Engine.cs  Engine.csproj  MousePick.cs  Settings.cs  SettingsSerializer.cs  Shader.cs
archive/wildstar tool/FileFormats/: FileFormats.csproj
archive/wildstar tool/FontGenerator/: FontGenerator.csproj  FreeType.cs
archive/wildstar tool/MathUtils/: MathHelper.cs  MatrixExtensions.cs
archive/wildstar tool/Shaders/: font_frag.glsl  font_vert.glsl  icon_frag.glsl  icon_vert.glsl  infinite_grid_frag.glsl  light_pass_frag.glsl  line_frag.glsl  line_vert.glsl  maptile_frag.glsl  maptile_vert.glsl  marquee_frag.glsl  marquee_vert.glsl  normal_frag.glsl  normal_vert.glsl  shader_frag.glsl  shader_vert.glsl  terrain_deferred_frag.glsl  terrain_deferred_frag.hlsl  terrain_deferred_vert.glsl  terrain_frag.glsl  terrain_vert.glsl  water_frag.glsl  water_vert.glsl  wireframe_frag.glsl  wireframe_vert.glsl
archive/wildstar tool/StatisticalAnalyzer/: Program.cs  StatisticalAnalyzer.csproj
src/: Archive.cpp  Archive.h  main.cpp  resource.h  resources.rc
src/About/: about.cpp  about.h
src/Area/: AreaFile.cpp  AreaFile.h  AreaFragment.glsl  AreaRender.cpp  AreaRender.h  DataTable.cpp  DataTable.h  Heightmap.cpp  Heightmap.h  Props.cpp  Props.h  TerrainShader.cpp  TerrainShader.h  TerrainTexture.cpp  TerrainTexture.h  Water.cpp  Water.h  terrainshader.cpp
src/Audio/: AudioPlayer.cpp  AudioPlayer.h  AudioPlayerWidget.cpp  AudioPlayerWidget.h  BNKReader.cpp  BNKReader.h  WEMExtractor.cpp  WEMExtractor.h
src/Audio/Wwise/: WwiseCodeBooks.cpp  WwiseCodeBooks.h  WwiseCodebookData.cpp  WwiseCodebookData.h  WwiseVorbisDecoder.cpp  WwiseVorbisDecoder.h
src/BNK/: BNK_hirc.cpp  BNK_hirc.h
src/Database/: Tbl.cpp  Tbl.h  TblReader.h  TblRecords.h
src/Database/Definitions/: AccountCurrencyType.h  AccountItem.h  AccountItemCooldownGroup.h  Achievement.h  AchievementCategory.h  AchievementChecklist.h  AchievementGroup.h  AchievementSubGroup.h  AchievementText.h  ActionBarShortcutSet.h  ActionSlotPrereq.h  ArchiveArticle.h  ArchiveCategory.h  ArchiveEntry.h  ArchiveEntryUnlockRule.h  ArchiveLink.h  AttributeMilestoneGroup.h  AttributeMiniMilestoneGroup.h  BindPoint.h  BinkMovie.h  BinkMovieSubtitle.h  BugCategory.h  BugSubcategory.h  CCStateAdditionalData.h  CCStateDiminishingReturns.h  CCStates.h  Challenge.h  ChallengeTier.h  CharacterCreation.h  Cinematic.h  (+355 more)
src/Shaders/: Font.hlsl  Icon.hlsl  InfiniteGrid.hlsl  LightPass.hlsl  Line_embedded.inl  MapTile.hlsl  MapTile_embedded.inl  Model.hlsl  Model_embedded.inl  ShaderManager.cpp  ShaderManager.h  Skybox_embedded.inl  Terrain.hlsl  TerrainDeferred.hlsl  Terrain_embedded.inl  Water.hlsl  Water_embedded.inl  Wireframe_embedded.inl
src/Skybox/: Sky.cpp  Sky.h  Sky_Manager.cpp  Sky_Manager.h  Worldsky.h
src/UI/: AddonManager.cpp  AddonManager.h  FileOps.cpp  FileOps.h  UI.cpp  UI.h  UI_AreaInfo.cpp  UI_AreaInfo.h  UI_AreaTab.cpp  UI_AreaTab.h  UI_ChunkTextures.cpp  UI_ChunkTextures.h  UI_ContentBrowser.cpp  UI_ContentBrowser.h  UI_Details.cpp  UI_Details.h  UI_FileTree.cpp  UI_FileTree.h  UI_Globals.cpp  UI_Globals.h  UI_ModelTab.cpp  UI_ModelTab.h  UI_Models.cpp  UI_Models.h  UI_Outliner.cpp  UI_Outliner.h  UI_RenderWorld.cpp  UI_RenderWorld.h  UI_Selection.cpp  UI_Selection.h  UI_Sky.cpp  UI_Sky.h  UI_Tables.cpp  UI_Tables.h  UI_TopBar.cpp  UI_TopBar.h  UI_Utils.cpp  UI_Utils.h  camera.cpp  design.cpp  (+2 more)
src/Utils/: BinLocale.cpp  BinStream.h  BinaryStream.cpp  ParallelAreaLoader.cpp  ParallelAreaLoader.h
src/export/: AudioExport.cpp  AudioExport.h  FBXExport.cpp  FBXExport.h  GLBExport.cpp  GLBExport.h  M3Export.cpp  M3Export.h  TerrainExport.cpp  TerrainExport.h
src/models/: M3Common.h  M3Loader.cpp  M3Loader.h  M3LoaderV95.cpp  M3LoaderV95.h  M3Render.cpp  M3Render.h  UI_Models.cpp
src/settings/: Keybinds.cpp  Keybinds.h  Settings.cpp  Settings.h  settings.cpp
src/tex/: tex.cpp  tex.h  texjpeg.cpp  texjpeg.h
(+2146 files in other folders)
